# AtherForge

./: .gitignore  .pyre_configuration  5_AI_Portfolio.xlsx  AetherForge_Architecture_Brief.md  AetherForge_Complete_Build_Guide_v1.0.md  AetherForge_Complete_SubAgent_Brief.md  AetherForge_User_Manual_v1.0.md  CLAUDE.md  Cargo.toml  LocalBuddyChat.rtf  README.md  commit_msg.txt  curl_out.json  docker-compose.yml  eval_dummy_test.sh  final_out.json  inspect_chroma.py  install.sh  lint_errors.txt  lint_errors_v2.txt  out.txt  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  run.sh  run_aetherforge.sh  run_dev.sh  tailwind.config.js  tauri.conf.json  test_docling_api.py  test_parse.py  test_parse2.py  test_parse_pypdf.py  test_raw_llm.py  test_simple.py  tsconfig.json  vite.config.ts
Test_related/tests/: __init__.py  test_oploRA_manager.py  test_silicon_colosseum.py
crates/prime-radiant/: Cargo.toml
crates/ruvllm/: Cargo.toml
crates/rvf/benches/: Cargo.toml
crates/rvf/rvf-cli/: Cargo.toml
crates/rvf/rvf-crypto/: Cargo.toml
crates/rvf/rvf-ebpf/: Cargo.toml
crates/rvf/rvf-import/: Cargo.toml
crates/rvf/rvf-kernel/: Cargo.toml
crates/rvf/rvf-launch/: Cargo.toml
crates/rvf/rvf-manifest/: Cargo.toml
crates/rvf/rvf-node/: Cargo.toml
crates/rvf/rvf-quant/: Cargo.toml
crates/rvf/rvf-runtime/: Cargo.toml
crates/rvf/rvf-server/: Cargo.toml
crates/rvf/rvf-solver-wasm/: Cargo.toml
crates/rvf/rvf-wasm/: Cargo.toml
crates/rvf/rvf-wire/: Cargo.toml
frontend/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.tsx  ChatPanel.tsx  CoherenceGraphPanel.tsx  GraphToolbar.tsx  InlineXRay.tsx  InsightReport.tsx  MessageBubble.tsx  ModuleTabs.tsx  PolicyEditor.tsx  RAGTreePanel.tsx  ThinkingBlock.tsx  XRayGraph.tsx
frontend/src/components/HUDs/: RAGForgeHUD.tsx  StreamSyncHUD.tsx  TuneLabHUD.tsx  WatchTowerHUD.tsx
frontend/src/components/Panels/: InsightsPanel.tsx  LoggerPanel.tsx  PoliciesPanel.tsx  SettingsPanel.tsx  SyncPanel.tsx  XRayPanel.tsx
frontend/src/lib/: markdown.ts  tauri.ts
frontend/src/types/: index.ts
icons/: icon.icns
models/: .gitkeep
scripts/: debug_engines.py  debug_search.py  test_hallucination.py  verify_deep_research.py  verify_final_recovery.py  verify_global_guard.py  verify_metasearch.py  verify_restoration.py  verify_sanitizer.py
src/: __init__.py  app_factory.py  chat_contract.py  config.py  logging_setup.py  main.py  meta_agent.py  schemas.py  settings_store.py  utils.py
src-tauri/src/: lib.rs  main.rs  ruvllm_bridge.rs
src/core/: calc_engine.py  container.py  grammar.py  mlx_engine.py  orchestrator.py  planning_tools.py  query_router.py  tool_registry.py  vfs.py
src/guardrails/: __init__.py  coherence_gate.py  default_policies.rego  silicon_colosseum.py
src/insights/: __init__.py  insight_forge.py
src/learning/: __init__.py  benchmarker.py  bitnet_trainer.py  evolution.py  history_manager.py  oploRA_manager.py  replay_buffer.py  sona_adapter.py  tasks.py
src/modules/: __init__.py  base.py  core_tools.py  document_registry.py  export_engine.py  ragforge_indexer.py  session_store.py
src/modules/analytics/: module.py  tools.py
src/modules/localbuddy/: graph.py  module.py
src/modules/ragforge/: benchmarker.py  calc_engine.py  cognitive_rag.py  graph.py  history_manager.py  module.py  ruvector_store.py  samr_lite.py  sparse_index.py  table_extractor.py  vector_store.py  vlm_enrich.py  vlm_processor.py  vlm_provider.py  xycut_layout.py
src/modules/search/: aggregator.py  base.py  engines.py
src/modules/streamsync/: directory_watcher.py  graph.py  module.py  rss_feeder.py  tools.py
src/modules/sync/: crypto.py  discovery.py  event_log.py  module.py  sync_manager.py
src/modules/tunelab/: graph.py  module.py  tools.py
src/modules/watchtower/: graph.py  module.py  tools.py
src/rca/: __init__.py  root_cause_agent.py
src/routers/: __init__.py  chat.py  export.py  guardrails.py  learning.py  ragforge.py  ragforge_stream.py  ragforge_tree.py  sessions.py  settings.py  streamsync.py  sync.py  watchtower.py
src/services/: chat_turns.py  document_intelligence.py
src/telemetry/: __init__.py  langfuse_exporter.py
tests/: AetherForge_UI_Features_Prompts.md  aetherforge_failure_analysis.html  aetherforge_ruvector_integration.html  aetherforge_session_ragforge.md  claude_answering_step.md  conftest.py  test_analytics_module.py  test_calc_engine.py  test_chat_contract.py  test_chat_e2e.py  test_cognitiverag.py  test_coherence_gate.py  test_meta_agent.py  test_oplora_manager.py  test_replay_buffer.py  test_system_contracts.py  verify_search.py
