[package]
name = "aetherforge"
version = "1.0.0"
description = "AetherForge v1.0 — Perpetual-learning, fully local, glass-box AI OS"
authors = ["AetherForge Team"]
license = "MIT"
repository = "https://github.com/NeoOne601/AtherForge"
edition = "2021"
rust-version = "1.78"

# ── See more keys at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aetherforge_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aetherforge"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
# ── Tauri 2.1 Core ──────────────────────────────────────────────
tauri = { version = "2.1", features = [
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"

# ── Serialization ────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async Runtime ────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── HTTP Client (to talk to embedded FastAPI) ────────────────────
reqwest = { version = "0.12", features = ["json", "stream"] }

# ── Crypto / Security ──────────────────────────────────────────
age = "0.10"                    # age encryption for passkey store
ring = "0.17"

# ── Logging ──────────────────────────────────────────────────────
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Local IPC / WebSockets ───────────────────────────────────────
tokio-tungstenite = "0.23"

# ── RuVector Native Integration ──────────────────────────────────
ruvector-core = "*"
ruvllm = { version = "^2.0", default-features = false, features = ["metal"] }
prime-radiant = "*"
rvf-runtime = "*"
ruvector-sona = "*"

[profile.release]
# Aggressively optimize for size and speed on M1
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
