[package]
name = "aetherforge"
version = "1.0.0"
description = "AetherForge v1.0 — Perpetual-learning, fully local, glass-box AI OS"
authors = ["AetherForge Team"]
license = "MIT"
repository = "https://github.com/NeoOne601/AtherForge"
edition = "2021"
rust-version = "1.78"

# ── See more keys at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aetherforge_lib"
path = "src-tauri/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aetherforge"
path = "src-tauri/src/main.rs"

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
# ── Tauri 2.1 Core ──────────────────────────────────────────────
tauri = { version = "2.1", features = [
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-autostart = "2.0"

# ── Serialization ────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Async Runtime ────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── HTTP Client (to talk to embedded FastAPI) ────────────────────
reqwest = { version = "0.12", features = ["json", "stream"] }

# ── Crypto / Security ──────────────────────────────────────────
age = "0.10"                    # age encryption for passkey store
ring = "0.17"

# ── Logging ──────────────────────────────────────────────────────
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Local IPC / WebSockets ───────────────────────────────────────
tokio-tungstenite = "0.23"

# ── RuVector Native Integration (local — air-gap compliant) ──────
# Source: https://github.com/ruvnet/ruvector (cloned once, vendored locally)
# No internet required for builds. Fully offline. Fully sovereign.
ruvector-core  = { path = "crates/ruvector-core" }
ruvllm         = { path = "crates/ruvllm", features = ["metal"] }
prime-radiant  = { path = "crates/prime-radiant" }
rvf-runtime    = { path = "crates/rvf/rvf-runtime" }
ruvector-sona  = { path = "crates/ruvector-sona" }

[profile.release]
# Aggressively optimize for size and speed on M1
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = [
    ".",
    "crates/ruvector-core",
    "crates/ruvllm",
    "crates/prime-radiant",
    "crates/rvf/rvf-runtime",
    "crates/ruvector-sona"
]

[workspace.package]
version = "2.0.6"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Ruvector Team"]
repository = "https://github.com/ruvnet/ruvector"


[workspace.dependencies]
# Core functionality
redb = "2.1"
memmap2 = "0.9"
hnsw_rs = "0.3"
simsimd = "5.9"
rayon = "1.10"
crossbeam = "0.8"

# Serialization
rkyv = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "2.16"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Worker", "MessagePort", "console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"

# Error handling and utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and numerics
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
mockall = "0.13"

# Formal verification
lean-agentic = "=0.1.0"

# Performance
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"
