# AetherForge v1.0 — pyproject.toml
# ─────────────────────────────────────────────────────────────────
# Python 3.12 project managed by uv/hatch. All deps are pinned to
# ranges that keep M1 binaries happy and avoid build-from-source.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aetherforge"
version = "1.0.0"
description = "Perpetual-learning, fully local, glass-box AI Operating System"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AetherForge Team" }]
requires-python = ">=3.12,<3.13"
keywords = ["ai", "local-llm", "bitnet", "langgraph", "opa", "continual-learning"]

dependencies = [
  # ── FastAPI / ASGI ─────────────────────────────────────────────
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  # ── Pydantic v2 (strict type safety across the board) ──────────
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  # ── LangGraph / LangChain (local-first, no cloud required) ────
  "langgraph>=0.2.0",
  "langchain>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-core>=0.2.0",
  # ── Local LLM Inference (GGUF / BitNet) ───────────────────────
  # llama-cpp-python with Metal support for M1/M2
  # Install: CMAKE_ARGS="-DLLAMA_METAL=on" pip install llama-cpp-python
  "llama-cpp-python>=0.2.80",
  # ── OPLoRA / Continual Learning Math ─────────────────────────
  # NumPy + SciPy for SVD-based orthogonal projections
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "torch>=2.3.0",           # CPU/MPS for LoRA operations on M1
  "safetensors>=0.4.0",     # For loading/saving LoRA adapter weights
  "peft>=0.11.0",           # HuggingFace PEFT for LoRA integration
  # ── OPA / Guardrails (Silicon Colosseum) ──────────────────────
  "opa-python-client>=1.3.0",
  # python-statemachine for FSM enforcement
  "python-statemachine>=2.3.0",
  # ── Storage / Replay Buffer ───────────────────────────────────
  "pyarrow>=16.0.0",        # Parquet I/O for replay buffer
  "cryptography>=42.0.0",   # age-like encryption via Fernet
  "sqlcipher3>=0.5.0",      # Encrypted SQLite for session store
  # ── Observability / Telemetry ────────────────────────────────
  "langfuse>=3.0.0",        # Local Langfuse (self-hosted)
  "structlog>=24.0.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-exporter-otlp>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-logging>=0.46b0",
  # ── Vector DB (local RAG) ────────────────────────────────────
  "chromadb>=0.5.0",        # Embedded, no server required
  # ── DSPy for InsightForge novelty detection ──────────────────
  "dspy-ai>=2.4.0",
  # ── Web Search (MetaAgent) ───────────────────────────────────────
  "duckduckgo-search",
  # ── Utilities ────────────────────────────────────────────────
  "rich>=13.7.0",           # Pretty CLI output
  "typer>=0.12.0",          # CLI entrypoint
  "python-dotenv>=1.0.0",
  "apscheduler>=3.10.0",    # Nightly OPLoRA scheduler
  "psutil>=6.0.0",          # Battery / CPU load detection
  "aiofiles>=23.2.0",
  "sentence-transformers>=3.0.0", # Local CPU embeddings
  "pypdf>=4.2.0",           # PDF parsing for RAGForge
  "python-multipart>=0.0.9", # Required by FastAPI for File uploads
  "matplotlib>=3.10.0",
  "seaborn>=0.13.0",
  "openpyxl>=3.1.0",         # Required for Excel support in pandas
  "headroom-ai>=0.1.0",
  "zeroconf>=0.130.0",       # Local network discovery
  "langchain-chroma>=0.1.0", # Chroma integration for LangChain
  "langchain-huggingface>=0.1.0", # HF embeddings for LangChain
  "watchdog>=6.0.0",         # Directory watching for StreamSync
  "feedparser>=6.0.0",       # RSS parsing for StreamSync
  "beautifulsoup4>=4.12.0",  # HTML parsing for web grounding
  "requests>=2.31.0",        # Legacy HTTP for some modules
  "pymupdf>=1.24.0",
  "docling>=1.6.0",
  "mlx-vlm>=0.1.0",
  # ── Apple MLX Native Inference (Gemma 4) ─────────────────────
  "mlx>=0.22.0",              # Apple's ML framework for UMA inference
  "mlx-lm>=0.22.0",           # Model loading/generation for MLX
  # ── RuVector Integration (Python Bindings) ───────────────────
  "ruvector>=0.1.0",
  "ruvllm>=0.1.0",
  "ruvector-sona>=0.1.0",
  "ruvector-refrag>=0.1.0",
  "prime-radiant-py>=0.1.0",
  "tiny-dancer>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",           # For FastAPI TestClient
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "black>=24.4.0",
]

[project.scripts]
aetherforge = "src.main:cli_app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff Linter Config ────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["src"]

# ── MyPy Strict Type Checking ────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── Pytest Config ────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "Test_related"]
addopts = "--cov=src --cov-report=term-missing -v"

# ── Coverage ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]
